Push preg_parser and registry_dict changes upstream

preg_parser and registry_dict are used in Chromium OS by authpolicy
code to fetch policy from AD servers. Right now, a custom version of
the two files is checked into platform2 in Chromium OS. This CL
pushes changes made to these files upstream to Chromium, in particular
making them compile outside of Windows. The goal is to eventually use
them in libchrome, so that only one version of the code has to be
maintained and unit tests can be reused.

Both files are compiled for Windows and Chrome OS, even though only
the Windows version is used in Chromium. This is done to ensure the
file compiles OK and won't cause an issue downstream when used in
Chrome OS.

The i18n UTF16 ToLower method has been replaced by an ASCII method for two reasons:
- We don't need it, we always check for ASCII keys. Keys and values are actually converted to UTF8 later and compared using case-insensitive ASCII checks, so if it was a problem, it would already surface.
- More importantly, using i18n would introduce a dependency in Chrome OS on the third-party library icu and we don't want to pull this in.

RegistryDict::ConvertToJSON has been #ifdef'ed out in Chrome OS because it would pull in some dependencies and it is not needed right now.

BUG=chromium:659645
TEST=Compiled on Linux and ran unit tests

Review-Url: https://codereview.chromium.org/2481753002
Cr-Commit-Position: refs/heads/master@{#432908}

Former-commit-id: 32d00fec960c4005730cdb13a51a8416340638e9